--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       .header-image {
         height: 100vh;
         width: 100%;
-        object-fit: cover;
+        object-fit: contain;
         
       }
 
