--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </head>
   <body>
     <img class="header-image" src="/startbildfreerider.jpg" alt="" />
-    <h2>Willkommen auf der Website des MC Free Rider</h2>
+    <h2>Willkkkkommen auf der Website des MC Free Rider</h2>
     <h3>TERMINE</h3>
     <div class="Beschreibung">
       <u>10. August: </u>
