--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         margin-bottom: 120px;
       }
       h2 {
-        font-size: 50px;
+        font-size: 40px;
         text-align: center;
         text-shadow: 5px 5px rgba(78, 74, 74, 0.5);
         margin-bottom: 70px;
@@ -38,18 +38,19 @@
       }
 
       h3 {
-        font-size: 40px;
+        font-size: 30px;
         text-align: center;
-        margin-bottom: 0px;
+        margin-bottom: 40px; 
+        margin-top: 70px;
       }
       h4 {
-        font-size: 35px;
+        font-size: 30px;
         text-align: center;
         margin-top: 40px;
       }
       .Beschreibung {
-        padding: 120px;
-        font-size: 40px;
+        padding-left:  120px;
+        font-size: 28px;
         line-height: 1.6;
       }
       @media (max-width: 700px) {
@@ -78,16 +79,19 @@
     <h2>Willkommen auf der Website des MC Free Rider</h2>
     <h3>TERMINE</h3>
     <div class="Beschreibung">
-      <u>10. August: </u>
+      <u>17.4.25 </u>
       <p>
-        29.Bildersuchfahrt mit Sound von der Arlen Bacon Combo mit Claus
-        Slowhand/Axel Politz/ Marius Stehle
+        Gründonnerstag Clubhausparty
+
       </p>
       <p></p>
 
-      <u>26. Oktober:</u>
+      <u>9.8.25</u>
       <p></p>
-      Rocknacht in Möggingen mit "The Specht feat.Holgie"
+      30. Bildersuchfahrt mit Party am Clubhaus 
+<p><u>25.10.25</u></p>
+Rocknacht Möggingen
+
     </div>
 
     <h3>CLUBADRESSE</h3>
