--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
         height: auto;
         border: 2px solid white;
         margin-bottom: 120px;
-      }
+    margin-top: 80px;      }
       h2 {
         font-size: 40px;
         text-align: center;
         text-shadow: 5px 5px rgba(78, 74, 74, 0.5);
         margin-bottom: 70px;
-        margin-top: 30px;
+        margin-top: 20px;
       }
 
       h3 {
         font-size: 30px;
         text-align: center;
-        margin-bottom: 40px; 
-        margin-top: 70px;
+        margin-bottom: 15px; 
+        margin-top: 40px;
       }
       h4 {
         font-size: 30px;
         text-align: center;
-        margin-top: 40px;
+        margin-top: 30px;
       }
       .Beschreibung {
         padding-left:  120px;
