--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         object-fit: contain;
         
       }
+      .Oben {
+        display: block;
+        margin: 5px auto;
+        max-width: 98%;
+        height: auto;
+        
+
+      }
 
       .memory {
         display: block;
@@ -45,8 +53,15 @@
       }
       h4 {
         font-size: 30px;
-        text-align: center;
+        text-align: ;
         margin-top: 30px;
+      }
+
+      .Termine{
+        font-size: 28px;
+        text-align: center;
+        line-height: 1.6;
+
       }
       .Beschreibung {
         padding-left:  120px;
@@ -75,34 +90,35 @@
     </style>
   </head>
   <body>
+    <img class="Oben" src="/HEad.jpg" alt="">
     <img class="header-image" src="/startbildfreerider.jpg" alt="" />
     <h2>Willkommen auf der Website des MC Free Rider</h2>
     <h3>TERMINE</h3>
-    <div class="Beschreibung">
-      <u>17.4.25 </u>
+    <div class="Termine">
+      <u>17.4.25: </u>
       <p>
         Gründonnerstag Clubhausparty
 
       </p>
       <p></p>
 
-      <u>9.8.25</u>
+      <u>9.8.25:</u>
       <p></p>
       30. Bildersuchfahrt mit Party am Clubhaus 
-<p><u>25.10.25</u></p>
+<p><u>25.10.25:</u></p>
 Rocknacht Möggingen
 
     </div>
 
     <h3>CLUBADRESSE</h3>
-    <div class="Beschreibung">
+    <div class="Termine">
       MC Free RIDER Möggingen e.V. Liggeringerstr. 21 78315 Radolfzell
       <p></p>
       Tel.: 07732/14143 (Donn. ab 20Uhr)
       <p>ACHTUNG: Kein öffentliches Clubhaus!</p>
     </div>
     <h3>KONTAKT</h3>
-    <div class="Beschreibung">
+    <div class="Termine">
       1.Vorstand: Manuel Schober Manuel@mcfreerider.de
     </div>
 
