--- a/index.html
+++ b/index.html
@@ -70,21 +70,24 @@
       }
       @media (max-width: 700px) {
         .Beschreibung {
-          font-size: 21px;
+          font-size: 18px;
           padding: 40px;
         }
         h2 {
-          font-size: 35px;
+          font-size: 28px;
         }
         h3 {
-          font-size: 30px;
+          font-size: 23px;
         }
         h4 {
-          font-size: 32px;
+          font-size: 20px;
         }
         .header-image {
             width: 100%;
             height: auto;
+        }
+        .Termine {
+          font-size: 18px;
         }
       }
     </style>
@@ -98,6 +101,7 @@
       <u>17.4.25: </u>
       <p>
         Gründonnerstag Clubhausparty
+        
 
       </p>
       <p></p>
